/*
 * Copyright (C) 2002-2019 FlyMine
 *
 * This code may be freely distributed and modified under the
 * terms of the GNU Lesser General Public Licence.  This should
 * be distributed with the code.  See the LICENSE file for more
 * information or http://www.gnu.org/copyleft/lesser.html.
 *
 */

BioValidator 0.1.2 (July 2019)

1. Add GFF3 validator
2. Add a getErrorMessage method in ValidationResult
3. Add Csv/Tsv validator
4. Added validationResult.getErrorMessage() to return single error message, Fixes #13
5. Validation rules are available through command line utility(using '--docs' parameter), Fixes #18
6. Verbose error messages in-case file not found or invalid type, Fixes #19
7. Guess validator type(i.e. file type) from filename if not provided, Fixes #24
8. Now, Validator does not throw any exception, always return ValidationResult, even in exception occurred,  Fixes #25