@@ -9,6 +9,7 @@ package org.intermine.biovalidator.utils;
  * information or http://www.gnu.org/copyleft/lesser.html.
  *
  */
+import org.apache.commons.lang3.math.NumberUtils;
 import org.intermine.biovalidator.validator.ValidatorType;
 
 import java.io.File;
@@ -20,6 +21,9 @@ import java.util.Optional;
  */
 public final class BioValidatorUtils
 {
+    private static final String BOOLEAN_TRUE = "true";
+    private static final String BOOLEAN_FALSE = "false";
+
     private BioValidatorUtils() { }
 
     /**
@@ -73,5 +77,52 @@ public final class BioValidatorUtils
             return Optional.empty();
         }
         return Optional.of(filename.substring(extensionIndex + 1));
+    }
+
+    /**
+     * Tests whether a string is a float or not
+     * @param s string value
+     * @return boolean, whether given string an float or not
+     */
+    public static boolean isFloat(String s) {
+        return NumberUtils.isCreatable(s);
+    }
+
+    /**
+     * Tests whether a string is an integer or not
+     * @param s string value
+     * @return boolean, whether given string an integer or not
+     */
+    public static boolean isInteger(String s) {
+        final int radix = 10;
+        if (s.isEmpty()) {
+            return false;
+        }
+        for (int i = 0; i < s.length(); i++) {
+            if (i == 0 && s.charAt(i) == '-') {
+                if (s.length() == 1) {
+                    return false;
+                }
+                else {
+                    continue;
+                }
+            }
+            if (Character.digit(s.charAt(i), radix) < 0) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    /**
+     * Tests whether a string is a boolean or not
+     * @param s string value
+     * @return boolean, whether given string a boolean or not
+     */
+    public static boolean isBoolean(String s) {
+        if (s == null) {
+            return false;
+        }
+        return BOOLEAN_TRUE.equalsIgnoreCase(s) || BOOLEAN_FALSE.equalsIgnoreCase(s);
     }
 }
