@@ -17,4 +17,5 @@ BioValidator 0.1.2 (July 2019)
 5. Validation rules are available through command line utility(using '--docs' parameter), Fixes #18
 6. Verbose error messages in-case file not found or invalid type, Fixes #19
 7. Guess validator type(i.e. file type) from filename if not provided, Fixes #24
-8. Now, Validator does not throw any exception, always return ValidationResult, even in exception occurred,  Fixes #25
+8. Now, all the methods in ValidatorHelper class does not throw any exception, always return ValidationResult,
+   even if exception occurred,  Fixes #25
